--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@ $(window).on('mousewheel', function(e){
 
 
 	if(st>=450) {
-		if (st<850) {
+		if (st<810) {
 			$(".videoHeader").css("margin-top", st-450+80);
 			$(".form-h2").css("margin-top", 400-(st-450));
 			$(".wrapper").css("background-position-y", st-450);
 		}else {
-			$(".videoHeader").css("margin-top", 850-450+80);
-			$(".form-h2").css("margin-top", 400-(850-450));
-			$(".wrapper").css("background-position-y", 850-450);
+			$(".videoHeader").css("margin-top", 810-450+80);
+			$(".form-h2").css("margin-top", 400-(810-450));
+			$(".wrapper").css("background-position-y", 810-450);
 		}
 
 	} else {
@@ -567,7 +567,7 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 	<div class="thanks">
    <h2>Спасибо за проявленный интерес к нашей компании!</h2>
    <h3>Для подтверждения данных наш менеджер<br/>свяжется с Вами в течении часа и отправит ссылку на видео</h3>
-   <h4>Сайт компании 770 capital</h4>
+   <h4><a href="https://770capital.com/">Сайт компании 770 capital</a></h4>
 </div>
 
 		<div class="main">
