--- a/index.html
+++ b/index.html
@@ -552,9 +552,10 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 
 
 <div class="backgrounds">
-	<img src="img/01.png" alt="">
-	<img src="img/02.png" alt="" style="margin-left: -30px;">
-	<img src="img/03.png" alt="">
+	<img src="img/01.png" alt="" style="margin-bottom: 500px;">
+	<img src="img/02.png" alt="" style="margin-left: -30px; margin-bottom: 500px;">
+	<img src="img/03.png" alt="" style="margin-left: -30px;">
+	<img src="img/04.png" alt="" style="margin-left: -30px;">
 </div>
 	<div class="scroll-indicator">
 		<img src="img/scroll-indicator.png" alt="" class="bullet 1bull">
