--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ $(window).on('mousewheel', function(e){
 		}
 		if(st>=2600 && st<2900) {
 			allowAnimation = false;
-			$("html, body").stop().animate({scrollTop:3500}, 3500-st, 'swing', function() {
+			$("html, body").stop().animate({scrollTop:3140}, 3140-st, 'swing', function() {
          		allowAnimation = true;
          	});
 		}
@@ -118,7 +118,7 @@ $(window).on('mousewheel', function(e){
 	}else{
 		$(".footer").hide();
 	}*/
-	//console.log(st);
+	console.log(st);
 	if(st>=0 && st<600) {
 		$(".bullet").attr("src", "img/scroll-indicator.png");
 		$(".1bull").attr("src", "img/scroll-indicator-active1.png");
@@ -370,7 +370,7 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 		$("html, body").stop().animate({scrollTop:2700}, 500, 'swing');
 	});
 	$(".5bull").click(function(){
-		$("html, body").stop().animate({scrollTop:3500}, 500, 'swing');
+		$("html, body").stop().animate({scrollTop:3140}, 500, 'swing');
 	});
 
    	$("#input-first-name").focusout(function(){
