--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ $(window).on('mousewheel', function(e){
 	}else{
 		$(".footer").hide();
 	}*/
-	console.log(st);
+	//console.log(st);
 	if(st>=0 && st<600) {
 		$(".bullet").attr("src", "img/scroll-indicator.png");
 		$(".1bull").attr("src", "img/scroll-indicator-active1.png");
