--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+	
 	<script src="scripts.js"></script>
 </head>
 <body>
@@ -60,7 +61,11 @@
 
 				<div class="video">
 				<!--<div class="v-line"></div>-->
-					<iframe width="450" height="250" src="https://www.youtube.com/embed/foKmOYlY-xc?controls=1&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0"></iframe>
+					<iframe id="TVAR" width="450" height="250" src="https://www.youtube.com/embed/foKmOYlY-xc?controls=1&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0" scrolling="no"></iframe>
+					<!--<video width="450" height="250" id="TVAR" preload="none"> 
+						<source type="video/youtube" src="https://www.youtube.com/watch?v=foKmOYlY-xc" />
+					</video>-->
+					
 				</div>
 
 				<img src="img/mobile-arrow-down.png" alt="" class="mobile-arrow-down">
@@ -348,6 +353,7 @@
 			
 		
 		<script type="text/javascript" src="slick/slick.min.js"></script>
+		
 
 </body>
 </html>
